# pgen-rs

./: .gitignore  Cargo.toml  README.md
data/: pset1_1000Genomes_chr16.vcf
data/basic1/: basic1.pvar
data/basic2/: basic2.psam
data/random1/: info.txt
data/sample2/: pset1_1000G_chr16.pgen  pset1_1000G_chr16.psam  pset1_1000G_chr16.pvar
src/: cli.rs  filter_parser.pest  filter_parser.rs  index.html  main.rs  pfile.rs  pgen.rs  pvar_parser.pest  pvar_parser.rs  reader.rs  scripts.js  styles.css
